fix: add cropBoxResizable props and set maxHeight for cropper section

--- a/projects/package/src/styles/main.scss
+++ b/projects/package/src/styles/main.scss
@@ -1,6 +1,9 @@
 @import "~cropperjs/dist/cropper.css";
 
 .antd-cropper-img-modal {
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow: hidden;
   .ant-modal-body {
     .actions-row {
       margin-top: 1rem;
